force-app/main/default/objects/Opportunity/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <description>This field is implemented as specified in ADO - 11628</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>