force-app/main/default/objects/Opportunity/fields/BudgetaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>BudgetaryStartDate__c</fullName>
    <description>This field is implemented as specified in ADO - 11552</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to indicate how far in advance of the customer&apos;s fiscal year start date they need their budgetary $s</inlineHelpText>
    <label>Budgetary Start Date</label>
    <type>Date</type>
</CustomField>