force-app/main/default/objects/Opportunity/fields/ConstructionPts__CP_Address__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__CP_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dodge Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>