force-app/main/default/objects/Opportunity/fields/ConstructionPts__CP_Project__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dodge Project (SF)</label>
    <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>