force-app/main/default/objects/Opportunity/fields/ConstructionPts__Dodge_PipeLine__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__Dodge_PipeLine__c</fullName>
    <formula>IF(NOT(BEGINS(ConstructionPts__CP_Project__r.ConstructionPts__ProjectID__c,&apos;Dodge&apos;)), HYPERLINK(&apos;/apex/ConstructionPts__Dodge_PipeLine?ProjectReport=&apos; + ConstructionPts__CP_Project__r.ConstructionPts__ProjectID__c +  &apos;?idp=U2FsZXNGb3JjZQ2&apos; ,&apos;View Project&apos;,&apos;_tab&apos; ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Project (PipeLine)</label>
    <type>Text</type>
</CustomField>