force-app/main/default/objects/Opportunity/fields/ConstructionPts__Final_Bid_Date_del__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__Final_Bid_Date_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Bid Date</label>
    <type>Date</type>
</CustomField>