force-app/main/default/objects/Opportunity/fields/ConstructionPts__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__OrderNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>