force-app/main/default/objects/Opportunity/fields/ConstructionPts__Tracking__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__Tracking__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Valuation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking</label>
    <type>Text</type>
</CustomField>