force-app/main/default/objects/Opportunity/fields/ConstructionPts__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>ConstructionPts__TrackingNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>