force-app/main/default/objects/Opportunity/fields/CustomersFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>CustomersFiscalYear__c</fullName>
    <description>This field is implemented as specified in ADO - 11552</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use this field to indicate the start of the customer&apos;s fiscal year</inlineHelpText>
    <label>Customer Fiscal Year</label>
    <type>Date</type>
</CustomField>