force-app/main/default/objects/Opportunity/fields/Dodge_Address__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Address__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Address</label>
    <type>Text</type>
</CustomField>