force-app/main/default/objects/Opportunity/fields/Dodge_Bid_Bond__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Bid_Bond__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Bid_bond__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Bid Bond</label>
    <type>Text</type>
</CustomField>