force-app/main/default/objects/Opportunity/fields/Dodge_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Bid_Date__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Bid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Bid Date</label>
    <type>Date</type>
</CustomField>