force-app/main/default/objects/Opportunity/fields/Dodge_Bid_Time__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Bid_Time__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Bid_time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Bid Time</label>
    <type>Text</type>
</CustomField>