force-app/main/default/objects/Opportunity/fields/Dodge_Bid_To__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Bid_To__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Bid_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Bid To</label>
    <type>Text</type>
</CustomField>