force-app/main/default/objects/Opportunity/fields/Dodge_Bond_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Bond_Remarks__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Bond_remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Bond Remarks</label>
    <type>Text</type>
</CustomField>