force-app/main/default/objects/Opportunity/fields/Dodge_City__c.field-meta.xml
<CustomField>
    <fullName>Dodge_City__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge City</label>
    <type>Text</type>
</CustomField>