force-app/main/default/objects/Opportunity/fields/Dodge_County__c.field-meta.xml
<CustomField>
    <fullName>Dodge_County__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__County__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge County</label>
    <type>Text</type>
</CustomField>