force-app/main/default/objects/Opportunity/fields/Dodge_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Project_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dodge Project Type</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>