force-app/main/default/objects/Opportunity/fields/Dodge_Report__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Report__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__ProjectID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Report #</label>
    <type>Text</type>
</CustomField>