force-app/main/default/objects/Opportunity/fields/Dodge_Stage__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Stage__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Stage255__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Stage</label>
    <type>Text</type>
</CustomField>