force-app/main/default/objects/Opportunity/fields/Dodge_State__c.field-meta.xml
<CustomField>
    <fullName>Dodge_State__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge State</label>
    <type>Text</type>
</CustomField>