force-app/main/default/objects/Opportunity/fields/Dodge_Stories_Above__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Stories_Above__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Stories_above__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Stories Above</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>