force-app/main/default/objects/Opportunity/fields/Dodge_Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dodge_Target_Start_Date__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Target_Start_As_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge Target Start Date</label>
    <type>Date</type>
</CustomField>