force-app/main/default/objects/Opportunity/fields/Dodge_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Dodge_ZipCode__c</fullName>
    <formula>ConstructionPts__CP_Project__r.ConstructionPts__Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dodge ZipCode</label>
    <type>Text</type>
</CustomField>