force-app/main/default/objects/Opportunity/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>Field for capturing additional information about the Lead Source. Mapped from Lead via Lead conversion. ADO - USER STORY 12571.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Source Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>