force-app/main/default/objects/Opportunity/fields/leankor__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>leankor__CurrentGenerators__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>