force-app/main/default/objects/Opportunity/fields/leankor__MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>leankor__MainCompetitors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>