force-app/main/default/objects/Opportunity/fields/leankor__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>leankor__TrackingNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>