force-app/main/default/objects/Opportunity/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <description>Field to denote the line of business the opportunity aligns to.</description>
    <label>Line Of Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Modernization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>