force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Field to capture the reason that an Opportunity is lost.</description>
    <inlineHelpText>Select the Loss Reason.</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Invalid TKTRIP</fullName>
            </value>
            <value>
                <fullName>Lack of Customer Response</fullName>
            </value>
            <value>
                <fullName>No Bid</fullName>
            </value>
            <value>
                <fullName>Not Convertible</fullName>
            </value>
            <value>
                <fullName>Product reason</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>