force-app/main/default/objects/Opportunity/fields/Major_Project__c.field-meta.xml
<CustomField>
    <fullName>Major_Project__c</fullName>
    <description>Field to identify if the Opportunity is considered to be a Major Project, based on Opportunity Amount and the Line Of Business.This is created as part of US-11792</description>
    <formula>OR ( AND (ISPICKVAL( Line_Of_Business__c ,&apos;New Installation&apos;), Amount &gt;= 5000000),AND(ISPICKVAL(Line_Of_Business__c ,&apos;Modernization&apos;), Amount &gt;= 3000000))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Major project criteria: New Installation (≥ $5M) or Modernization (≥ $3M).</inlineHelpText>
    <label>Major Project?</label>
    <type>Checkbox</type>
</CustomField>