force-app/main/default/objects/Opportunity/fields/Proposed_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date__c</fullName>
    <description>This field is implemented as specified in ADO - 11628</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Date</label>
    <type>Date</type>
</CustomField>