force-app/main/default/objects/Opportunity/fields/Sales_Support_Involved__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Support Involved</label>
    <type>Checkbox</type>
</CustomField>