force-app/main/default/objects/Opportunity/fields/SVMXA360__ProductServiceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign related to the Opportunity Record.</description>
    <inlineHelpText>The Product Service Campaign related to the Opportunity Record.</inlineHelpText>
    <label>Product Service Campaign</label>
    <referenceTo>ProductServiceCampaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>