force-app/main/default/objects/Opportunity/fields/Tax_Exemption_Flag__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is implemented as specified in ADO - 11628</description>
    <label>Tax Exemption Flag</label>
    <type>Checkbox</type>
</CustomField>