force-app/main/default/objects/Opportunity/recordTypes/Capital_Plan.recordType-meta.xml
<RecordType>
    <fullName>Capital_Plan</fullName>
    <active>true</active>
    <businessProcess>TKE NIMOD %26 Service%2FRepair Sales Process</businessProcess>
    <description>Standard Record Type for Capital Plan Opportunities per ADO story 13520</description>
    <label>Capital Plan</label>
</RecordType>