force-app/main/default/objects/Opportunity/recordTypes/NI_MOD.recordType-meta.xml
<RecordType>
    <fullName>NI_MOD</fullName>
    <active>true</active>
    <businessProcess>TKE NIMOD %26 Service%2FRepair Sales Process</businessProcess>
    <description>Standard Record Type for NI or MOD Opportunities per ADO story 13520</description>
    <label>NI MOD</label>
</RecordType>