force-app/main/default/objects/Opportunity/recordTypes/Service_Repair.recordType-meta.xml
<RecordType>
    <fullName>Service_Repair</fullName>
    <active>true</active>
    <businessProcess>TKE NIMOD %26 Service%2FRepair Sales Process</businessProcess>
    <description>Standard Record Type for Service or Repair Opportunities per ADO story 13520</description>
    <label>Service &amp; Repair</label>
</RecordType>