force-app/main/default/objects/Opportunity/recordTypes/TKE_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>TKE_Opportunity</fullName>
    <active>true</active>
    <businessProcess>TKE NIMOD %26 Service%2FRepair Sales Process</businessProcess>
    <description>Standard Record Type for New Installation, Modernization, and Service or Repair Opportunities</description>
    <label>TKE Opportunity</label>
</RecordType>