force-app/main/default/objects/Opportunity/validationRules/Lossreason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lossreason_required</fullName>
    <active>true</active>
    <description>This is developed as part of US-11339</description>
    <errorConditionFormula>AND(ISPICKVAL( StageName,&apos;Closed Lost&apos;),IsClosed = TRUE, ISPICKVAL(Loss_Reason__c,&apos;&apos;),NOT( $Permission.TKE_Bypass_Validation))</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Provide the reason for the Opportunity being marked Closed Lost.</errorMessage>
</ValidationRule>