force-app/main/default/objects/Opportunity/validationRules/Opportunity_Stage_InOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Stage_InOrder</fullName>
    <active>true</active>
    <description>US-13097Validation to make sure opp stage is in order</description>
    <errorConditionFormula>AND(OR( PRIORVALUE(StageName) == &apos;Closed Won&apos; ,PRIORVALUE(StageName) == &apos;Closed Lost&apos;),PRIORVALUE(StageName) != TEXT(StageName))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Cannot change from closed to any</errorMessage>
</ValidationRule>